public/css/default.css
/* ... */
.appprocess { position: relative; }
.appprocess .appbadge { position: absolute; margin: 20px 0 0 7px; font-size: 7px; }
.appprocess .appbadge i { font-size: 7px; }

.appprogress { position: absolute; top: 0; left: 0; display: block; width: 100%; height: 3px; padding: 0; }
.appprocess .appprogress { bottom: 5px; top: auto; padding: 0 8px; }

.appprogress span { height: 3px; display: block; border-radius: 3px; width: 0; box-shadow: 0 5px 10px rgba(0,0,0,0.3); }
.light .appprogress span { box-shadow: none; }

.app-icon { float: left; width: 40px; font-size: 16px; text-align: center; height: 38px; padding: 7px 0 0 0; background-color: rgba(0,0,0,0.2); color: #A0A0A0; }
.app-meta { margin-left: 50px; padding: 7px 0 0 0; font-size: 16px; }

.form-border { border-left: 1px solid #F0F0F0; }

.centered { height: 100%; width: 100%; display: table-cell; vertical-align: middle; text-align: center; }
.centered-container { display: table; width: 100%; height: 100%; }

.emptyspace { height: 45px; }
.fullheight { overflow: hidden; }
.color { color: #017CCA; }

.fs11 { font-size: 11px !important; }
.help { font-size: 11px; color: #A0A0A0; margin-top: 7px; line-height: 13px; }
.help .fa, .help .fal, .help .far { margin-right: 5px; }
.help code { font: normal normal 11px Arial; background-color: #F0F0F0; padding: 2px 5px; border-radius: 4px; }

.approle { font-size: 14px; text-align: center; width: 34px; border-left: 1px solid #E0E0E0; padding: 3px 0; }
.approle:first-child { border-left: 0; }

.toolbar { margin-bottom: 15px; }
.toolbar button { outline: 0; background-color: transparent; border: 1px solid transparent; border-radius: 4px; font-size: 12px; height: 24px; padding: 0 5px; margin: 0; color: black; margin-right: 5px; }
.toolbar button i { margin-right: 5px; }
.toolbar button:hover { background-color: white; box-shadow: 0 2px 3px rgba(0,0,0,0.05); }
.toolbar button:disabled { color: silver; cursor: not-allowed; background-color: #D5D7DB; box-shadow: none; }
.toolbar button:disabled i { color: silver; }
.toolbar button.right { float: right; margin-left: 5px; margin-right: 0; }
.toolbar > span { margin: 2px 6px 0; border-left: 1px solid #D0D0D0; height: 20px; padding: 0 2px 0 0; vertical-align: middle; display: inline-block; position: relative; }
.toolbar .selected { background-color: #FFE7A1 !important; box-shadow: 0 2px 3px rgba(0,0,0,0.05); }

.uppercase { text-transform: uppercase; }
.inline { position: relative; display: inline-block; }

.keyvalue { border-bottom: 1px solid #F0F0F0; padding: 5px 0; margin-bottom: 10px; transition: all 0.3s; }
.keyvalue:hover { background-color: #F8F8F8; padding-left: 10px; padding-right: 10px; }
.keyvalue .key { font-size: 11px; font-weight: bold; margin-bottom: 2px; color: black; }
.keyvalue .value { text-overflow: ellipsis; white-space: nowrap; overflow: hidden; font-size: 14px; color: #A0A0A0; }
.keyvalue i { margin-right: 5px; }
.upper { text-transform: uppercase; }
.w100p { width: 100%; }
.img-application { border-radius: 25px; border: 1px solid #E0E0E0; }
.silver { color: #A0A0A0; }
.caption { font-size: 14px; margin-bottom: 15px; color: black; text-transform: uppercase; font-weight: bold; }
.caption i { margin-right: 5px; }

.ui-notifications { position: fixed; width: 340px; top: 45px; right: 0; background: rgba(20,20,20,0.9); padding: 0; overflow-y: scroll; overflow-x: hidden; z-index: 33; box-shadow: -5px 0 20px rgba(0,0,0,0.03); border-left: 1px solid #303030; overflow-scrolling: touch; }
.light .ui-notifications { background-color: rgba(255,255,255,0.8); border-left-color: #E0E0E0; }
.ui-notifications i { margin-right: 3px; }
.ui-notifications-clear { margin: 15px 0 10px 10px; font-size: 11px; cursor: pointer; color: silver; }
.light .ui-notifications-clear { color: black; }
.ui-notifications-clear:hover { text-decoration: underline; }
.ui-notifications-message { background-color: #424242; margin: 10px; padding: 0; border-radius: 3px; font-size: 12px; cursor: pointer; transition: all 0.3s; border: 1px solid #505050; border-top-width: 2px; border-top-color: #3BAFDA; }
.light .ui-notifications-message { background-color: white; border-color: #E0E0E0; border-top-color: #3BAFDA; }

.ui-notifications-success { border-top-color: #8CC152 !important; }
.ui-notifications-error { border-top-color: #E60000 !important; }

.ui-notifications-close { float: right; width: 26px; height: 26px; line-height: 26px; text-align: center; border-left: 1px solid #505050; cursor: pointer; padding: 0 0 0 3px; color: #777777; }
.light .ui-notifications-close { color: gray; border-left-color: #E0E0E0; }
.ui-notifications-date { float: right; font-size: 10px; margin: 0 10px 0 0; line-height: 26px; color: white; }
.ui-notifications-title img { border: 1px solid #3BAFDA; border-radius: 3px; margin-right: 5px; vertical-align: middle; }
.ui-notifications-title { height: 26px; font-size: 11px; border-bottom: 1px solid #505050; padding: 0 10px; line-height: 24px; color: white; border-radius: 3px 3px 0 0; }
.light .ui-notifications-title { border-bottom-color: #E0E0E0; color: black; background-color: white; }
.ui-notifications-padding { padding: 0 10px; }
.ui-notifications-body { line-height: 14px; font-size: 12px; margin-top: 10px; }
.ui-notifications button { display: inline-block; position: relative; border-radius: 2px; outline: 0; font-size: 11px; color: white; font-weight: bold; padding: 2px 10px; margin-bottom: 10px; border: 1px solid white; background: transparent; }
.ui-notifications button:hover { opacity: 0.9; }
.ui-notifications-remove {}

.light .ui-notifications button { color: black; border-color: black; }

.panel { background-color: white; border-radius: 3px; box-shadow: 0 3px 30px rgba(0,0,0,0.03); border: 1px solid #E0E0E0; }
.panel > label { display: block; padding: 15px 20px; border-bottom: 1px solid #E0E0E0; font-size: 16px; color: black; font-weight: bold; }
.panel > label i { margin-right: 5px; }
/* ... */

